terraform/main.tf
# 1. Virtual Private Network erzeugen
resource "aws_vpc" "app_vpc" {
  cidr_block = "10.0.0.0/16"
}

# 2. Erzeugen eines Internet Gateways
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.app_vpc.id
}

# 3. Erzeugen einer Routing-Table
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.app_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.igw.id
  }

}

# 4. Subnetze erzeugen
resource "aws_subnet" "public_subnet" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"
  tags = {
   Name = "production"
  }
}

resource "aws_subnet" "public_subnet2" {
  vpc_id                  = aws_vpc.app_vpc.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1b"
    tags = {
   Name = "development"
  }
}

# 5. Subnets der Route-Table zuweisen
resource "aws_route_table_association" "public_rt_association" {
  route_table_id = aws_route_table.public_rt.id
  subnet_id      = aws_subnet.public_subnet.id
}

# 6. Erzeugen von Sicherheitsgruppen
resource "aws_security_group" "sg" {
  name        = "allow_ssh_http_https"
  description = "Allow ssh http https inbound traffic"
  vpc_id      = aws_vpc.app_vpc.id

  # Port 22  SSH
  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  # Port 80 HTTP
  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  # Port 443 HTTPS
  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_ssh_http_https"
  }
}


# 7. Erzeugen eines Netzwerk-Interface mit den Subnetzen

resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.public_subnet.id
  private_ips_count = 1
  private_ips     = ["10.0.1.50","10.0.1.100"]
  security_groups = [aws_security_group.sg.id]
}

# 8. Zuweisen der elatischen IP-Adressen

resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.igw]
}

resource "aws_eip" "two" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.100"
  depends_on                = [aws_internet_gateway.igw]
}

# 9. Aufsetzen eines Apache-Webservers

# Erzeugt eine EC2 Instanz auf die ein Webserver läuft
resource "aws_instance" "webserver" {
  ami               = "ami-052efd3df9dad4825"
  instance_type     = "t2.micro"
  availability_zone = "us-east-1a"
  monitoring = true
  # security_groups   = [aws_security_group.sg.id]

  network_interface {
    device_index         = 0
    network_interface_id = aws_network_interface.web-server-nic.id
  }

  user_data = <<-EOF
#!/bin/bash
    sudo apt-get update
		sudo apt-get install -y apache2
		sudo systemctl start apache2
		sudo systemctl enable apache2
		echo "<h1>Deployed via Terraform</h1>" | sudo tee /var/www/html/index.html
EOF

  tags = {
    Name = "apache-webserver"
  }
}

# 10. Erzeugen eines S3-Buckets

resource "aws_s3_bucket_acl" "example_bucket_acl" {
  bucket = aws_s3_bucket.bucket_example.id
  acl    = "public-read-write"
}

# 11. Erzeugen einer MySQL-Datenbank

# Auto-Scaling 10 - 40

# resource "aws_db_instance" "mysql-database" {
#   allocated_storage    = 10
#   max_allocated_storage = 40
#   db_name              = "coolDB"
#   engine               = "mysql"
#   engine_version       = "5.7"
#   instance_class       = "db.t2.micro"
#   username             = "admin"
#   password             = "supergutespasswort"
#   skip_final_snapshot  = true
# }
